--- a/style.css
+++ b/style.css
@@ -144,6 +144,10 @@ img {
   transform:  translate(-100px, 100px) scale(1.5);
 }
 
+table img {
+  transition: transform 0.5s;
+}
+
 table img:hover {
   transform: scale(1.3);
 }
@@ -394,24 +398,16 @@ label {
   width: 90px;
 }
 
-.bulletin .frec {
-  padding: 10px;
-  text-align: left;
-}
-
-.bulletin input {
-  padding: 10px;
-  text-align: left;
-}
-
-.bulletin label {
-  padding: 10px;
-  text-align: left;
+input[type="radio"]:checked + label{
+  font-weight: bold;
 }
 
 .buttons {
+  display: flex;
+  flex-wrap: wrap; 
   padding: 10px;
   margin: 10px 0px;
+  align-self: baseline;
 }
 
 #botonLimpiar {
@@ -420,4 +416,30 @@ label {
 
 #botonEnviar {
   min-width: 100px;
+}
+
+@keyframes toSpin {
+  0% { transform: rotate(0deg)}
+  10% { transform: rotate(36deg)}
+  20% { transform: rotate(72deg)}
+  30% { transform: rotate(108deg)}
+  40% { transform: rotate(144deg)}
+  50% { transform: rotate(180deg)}
+  60% { transform: rotate(216deg)}
+  70% { transform: rotate(252deg)}
+  80% { transform: rotate(288deg)}
+  90% { transform: rotate(324deg)}
+  100% { transform: rotate(360deg)}
+}
+
+#sunSpinner {
+  animation-name: toSpin;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-duration: 2s;
+  animation-delay: 0.5s;
+  /* cursor: auto; */
+  width: 64px;
+  height: 64px;
+  margin: 0px 10px;
 }
