--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   src: url("./assets/fonts/Roboto-Thin.ttf"); 
 }
 
-
 * {
   margin: 0;
   padding: 0;
@@ -80,6 +79,7 @@ header a {
 }
 
 header a:hover {
+  color: white;
   transform: scale(1.2);
   text-decoration: underline;
 }
@@ -209,7 +209,7 @@ iframe{
 }
 
 span{
-  display: block;
+  display: inline-block;
   padding-top: 3%;
 }
 
@@ -223,11 +223,11 @@ tr {
   width: 100%;
 }
 
-table {
+/* table {
   display: flex;
   padding: 20px 0px;
   width: 100%;
-}
+} */
 
 @media screen and (max-width: 428px) {
   table img {
@@ -253,7 +253,7 @@ table {
 
 footer{
   grid-area: footer;
-  display:block;
+  display: block;
   padding: 3%;
 }
 
@@ -299,9 +299,11 @@ footer{
   transform: translate(100px, 100px) scale(1.3);
 }
 
-.tabla {
-  margin: 2%;
-  width: 98%;
+table, .tabla, .table {
+  /* margin: 2%; */
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
 }
 
 .tablaContacto {
@@ -312,7 +314,7 @@ footer{
   margin-top: 10px;
   margin-left: auto;
   width: 95%;
-  min-width: 80%;
+  /* min-width: 80%; */
 }
 
 .tablaContacto tr {
@@ -321,14 +323,14 @@ footer{
 }
 
 .tablaContacto td {
-  min-width: 100px;
+  min-width: 75px;
   max-width: 150px;
   /* width: 120px;  */
   border: none;
 }
 
 .tablaContacto th {
-  min-width: 100px;
+  min-width: 50px;
   border: none;
 }
 
@@ -350,6 +352,7 @@ footer{
 }
 
 fieldset {
+  border: 1px solid gray;
   padding: 10px;
   margin: 10px 0px;
 }
@@ -367,55 +370,103 @@ input {
   width: 20%;
 }
 
-input[name="frec"] {
-  width: 5%;
+.form-control {
+  margin: 0px 5px;
 }
 
-.credentials {
-  display: inline-block;
+#initFields .form-control, .form-select{
+  margin: 5px;
+  min-width: 150px;
+  max-width: 50%;
+}
+
+#initFields__EdadPais {
+  /* max-width: 50%; */
+  display: flex;
+  width: 50%;
+}
+
+#initFields__EdadPais input {
+  min-width: 20%;
+}
+
+label {
+  padding: 0px 5px;
+  margin: 5px;
+}
+
+.credentials, .bulletin {
   padding: 10px;
-  width: 100%;
-  /* text-align: center; */
+  width: 50%;
+  min-width: 300px;
 }
 
-.credentials input {
-  display: inline-block;
+#server {
+  display:flex;
+  width: 50%;
+}
+
+#credenciales span{
   width: 30%;
-  align-items: flex-start;
+  max-width: 40px;
+}
+
+#server input {
+  margin-left: 0px;
+  min-width: 70%;
+}
+
+.bulletin .input-group div {
+  width: 100%;
+ }
+
+@media screen and (max-width: 340px) {
+  .credentials, .bulletin {
+    min-width: 90%;
+  }
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 95%;
+    height: auto;
+  }
+
+  #credenciales input {
+    margin: 2px 0px;
+    width: 100%;
+  }
+
+  #server {
+    display:flex;
+    width: 100%;
+
+  }
+  #credenciales span{
+    margin: 2px 0px;
+  }
 }
 
 #countries {
   display: inline-block;
   padding: 10px;
   margin: 5px;
-  width: 15%;
-}
-
-label {
-  display: inline-block;
-  padding: 10px;
-  margin: 5px;
-  width: 90px;
+  min-width: 150px;
 }
 
 input[type="radio"]:checked + label{
   font-weight: bold;
 }
 
-.buttons {
-  display: flex;
-  flex-wrap: wrap; 
-  padding: 10px;
-  margin: 10px 0px;
-  align-self: baseline;
-}
-
 #botonLimpiar {
   min-width: 100px;
 }
 
-#botonEnviar {
+#botonEnviar, #botonCargando {
   min-width: 100px;
+  background-color: rgb(255, 187, 60);
+  border-color: rgb(255, 187, 60);
+;
 }
 
 @keyframes toSpin {
