--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,12 @@
+.color-Facebook {
+  color: #3b5998; }
+
+.color-Twitter {
+  color: #00acee; }
+
+.color-Instagram {
+  color: #E1306C; }
+
 @font-face {
   font-family: "Roboto Thin";
   src: url("./../assets/fonts/Roboto-Thin.ttf"); }
@@ -142,10 +151,31 @@ span {
   display: inline-block;
   padding-top: 3%; }
 
+.color-Facebook {
+  color: #3b5998; }
+
+.color-Twitter {
+  color: #00acee; }
+
+.color-Instagram {
+  color: #E1306C; }
+
 footer {
   grid-area: footer;
-  display: block;
+  display: inline-block;
   padding: 3%; }
+  footer span {
+    padding: 10px; }
+  footer i {
+    display: inline-block;
+    padding: 0px 10%; }
+  @media screen and (max-width: 738px) {
+    footer {
+      display: flex;
+      flex-direction: column; }
+      footer i {
+        display: inline-block;
+        padding: 10px; } }
 
 table img {
   transition: transform 0.5s; }
