--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -158,15 +158,24 @@ article {
   /* max-width: 80%; */
 }
 
+// Aplicación de Mixin
+@mixin videoSizes($vmin-height, $vmin-width, $vmax-height, $vmax-width){
+    min-height: $vmin-height;
+    min-width: $vmin-width;
+    max-height: $vmax-height;
+    max-width: $vmax-width;
+}
+
 .info__video {
   grid-area: info__video;
   display: inline-block;
   position: relative;
   width: $info__video-width;  
-  min-height: $info__video-min-height;
-  min-width: $info__video-min-width;
-  max-height: $info__video-max-height;
-  max-width: $info__video-max-width;
+  @include videoSizes($info__video-min-height, $info__video-min-width, $info__video-max-height, $info__video-max-width)
+  // min-height: $info__video-min-height;
+  // min-width: $info__video-min-width;
+  // max-height: $info__video-max-height;
+  // max-width: $info__video-max-width;
 }
 
 iframe{
@@ -182,21 +191,13 @@ span{
   padding-top: $span-top-padding;
 }
 
-.color-Facebook {
-  color: map-get($map: $socialNetworks-colors, $key: Facebook);
-}
-.color-Twitter {
-  color: map-get($map: $socialNetworks-colors, $key: Twitter);
-}
-.color-Instagram {
-  color: map-get($map: $socialNetworks-colors, $key: Instagram);
-}
-
+// Aplicación de Extend para heredar (y pisar) propiedades de span
 footer{
   grid-area: footer;
   display: inline-block;
   padding: $footer-padding;
   & span {
+    @extend span;
     padding: 10px;
   }
 
