Grid propio para Index y se aplica sass a pag Experiencia

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,7 +1,13 @@
-$general-layout:"header header header header"
+$index-layout:"header header header header"
   "Imagenes Imagenes Imagenes Imagenes"
   "info__resume info__resume info__video info__video"
   "info__resume info__resume info__video info__video"
+  "footer footer footer footer";
+
+$general-layout:"header header header header"
+  "Imagenes Imagenes Imagenes Imagenes"
+  "Cuerpo Cuerpo Cuerpo Cuerpo"
+  "Cuerpo Cuerpo Cuerpo Cuerpo"
   "footer footer footer footer";
 
 $contact-layout:"header header header header"
