--- a/assets/scss/_sizes.scss
+++ b/assets/scss/_sizes.scss
@@ -46,3 +46,21 @@ $iframe-width: 100%;
 $span-top-padding: 3%;
 
 $footer-padding: 3%;
+
+$additionalExp-list-style: none;
+
+$cuerpo-width: 95%;
+
+$table-border: 2px;
+$table-column-padding: 10px;
+$table-row-width: 100%;
+
+$table-flex-width: 428px;
+$table-img-min-width: 100%;
+$table-img-min-height: $table-img-min-width;
+
+$table-flex-row-width: 100%;
+
+$additionalExp-list-style: none;
+$additionExp-margin: 2%;
+$additionalExp-width: 95%;
