--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,12 +25,15 @@
   #header__logo {
     display: none; } }
 
-.gridContainer {
+.gridContainer, .IndexgridContainer {
   background-image: linear-gradient(to top, #ffff53, #ffbb3c);
   display: grid;
-  grid-template-areas: "header header header header" "Imagenes Imagenes Imagenes Imagenes" "info__resume info__resume info__video info__video" "info__resume info__resume info__video info__video" "footer footer footer footer";
+  grid-template-areas: "header header header header" "Imagenes Imagenes Imagenes Imagenes" "Cuerpo Cuerpo Cuerpo Cuerpo" "Cuerpo Cuerpo Cuerpo Cuerpo" "footer footer footer footer";
   grid-template-rows: auto auto auto auto auto;
   grid-template-columns: auto auto auto auto auto; }
+
+.IndexgridContainer {
+  grid-template-areas: "header header header header" "Imagenes Imagenes Imagenes Imagenes" "info__resume info__resume info__video info__video" "info__resume info__resume info__video info__video" "footer footer footer footer"; }
 
 .gridContainerContact {
   /* background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%); */
@@ -170,9 +173,12 @@ footer {
 
 table img {
   transition: transform 0.5s; }
+  table img:hover {
+    transform: scale(1.3); }
 
-table img:hover {
-  transform: scale(1.3); }
+.Experiencia {
+  grid-area: Cuerpo;
+  width: 95%; }
 
 .Referencia {
   font-style: italic; }
@@ -201,11 +207,13 @@ tr {
     width: 100%;
     height: auto; } }
 
-.additionalExp {
+#additionalExp {
   /* background-color: gainsboro; */
   list-style-type: none;
   margin: 2%;
   width: 95%; }
+  #additionalExp h1 {
+    padding-top: 10px; }
 
 @media screen and (max-width: 800px) {
   .teamMembers img {
