--- a/assets/scss/_sizes.scss
+++ b/assets/scss/_sizes.scss
@@ -64,3 +64,14 @@ $table-flex-row-width: 100%;
 $additionalExp-list-style: none;
 $additionExp-margin: 2%;
 $additionalExp-width: 95%;
+
+$members-flex-max-width1: 800px;
+$members-flex-max-width2: 660px;
+$members-flex-max-width3: 550px;
+$membersImgs-flex-min-width: 650px;
+$membersImgs-flex-min-width2: 512px;
+$membersImgs-flex-min-width3: 256px;
+$membersImgs-flex-min-height: $membersImgs-flex-min-width;
+$membersImgs-flex-min-height2: $membersImgs-flex-min-width2;
+$membersImgs-flex-min-height3: $membersImgs-flex-min-width3;
+$membersImgs-padding: 25px;
