--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -161,6 +161,7 @@ article {
   padding: $info__resume-padding;
   width: $info__resume-width;
   min-width: $info__resume-min-width;
+  text-align: justify;
   /* max-width: 80%; */
 }
 
