--- a/assets/scss/_sizes.scss
+++ b/assets/scss/_sizes.scss
@@ -75,3 +75,13 @@ $membersImgs-flex-min-height: $membersImgs-flex-min-width;
 $membersImgs-flex-min-height2: $membersImgs-flex-min-width2;
 $membersImgs-flex-min-height3: $membersImgs-flex-min-width3;
 $membersImgs-padding: 25px;
+
+$projects-imgs-width: 512px;
+$projects-imgs-height: $projects-imgs-width;
+$projects-imgs-transition-time: 0.5s;
+$projects-width-translate: 100px;
+$projects-height-translate: $projects-width-translate;
+$projects-scale: 1.3;
+
+$tablaContacto-border: 2px;
+$tablaContacto-spacing: 2px;
