Se aplica SASS a pagina Contacto

--- a/assets/scss/_colores.scss
+++ b/assets/scss/_colores.scss
@@ -2,7 +2,7 @@
 $background-color1: rgb(255, 255, 83);
 $background-color2: rgb(255, 187, 60);
 $gradient-angle: 120deg;
-
+$contacto-buttons-color: rgb(255, 187, 60);
 $header-active-option-color: orangered; 
 
 $iframe-border-color: red;
