--- a/assets/scss/_sizes.scss
+++ b/assets/scss/_sizes.scss
@@ -85,3 +85,73 @@ $projects-scale: 1.3;
 
 $tablaContacto-border: 2px;
 $tablaContacto-spacing: 2px;
+$tablaContacto-margin-topBottom: 10px;
+$tablaContacto-width: 95%;
+$tablaContacto-column-max-width: 150px;
+$tablaContacto-columnHeader-min-width: 80px;
+
+$tablaContacto-flex-max-width: 450px;
+$tablaContacto-flex-row-width: 100%;
+$tablaContacto-flex-column-width: 240px;
+
+$contacto-register-width: 95%;
+$contacto-fieldset-border-width: 1px;
+$contacto-fieldset-border-color: grey;
+$contacto-fieldset-padding: 10px;
+$contacto-fieldset-margin: 10px 0px;
+
+$contacto-input-padding: 10px;
+$contacto-input-margin: 5px;
+$contacto-input-width: 20%;
+
+$contacto-formControl-margin: 0px 5px;
+
+$contacto-initFields-form-margin: 5px;
+$contacto-initFields-form-min-width: 150px;
+$contacto-initFields-form-max-width: 50%;
+$contacto-initFields-EdadPais-width: 50%;
+$contacto-initFields-EdadPais-input-width: 20%;
+
+$contacto-label-padding: 0px 5px;
+$contacto-label-margin: 5px;
+
+$contacto-credentials-bulletin-padding: 10px;
+$contacto-credentials-bulletin-width: 50%;
+$contacto-credentials-bulletin-min-width: 300px;
+
+$contacto-flex-max-width: 340px;
+$contacto-credentials-bulletin-flex-min-width: 90%;
+
+$contacto-server-width: 50%;
+$contacto-server-input-margin-left: 0px;
+$contacto-server-input-min-width: 70%;
+
+$contacto-credenciales-span-width: 30%;
+$contacto-credenciales-span-max-width: 40px;
+
+$contacto-bulletin-group-div-width: 100%;
+$contacto-group-flex-width: 95%;
+
+$contacto-credenciales-input-flex-margin: 2px 0px;
+$contacto-credenciales-input-flex-width: 100%;
+$contacto-credenciales-span-flex-margin: 2px 0px;
+
+
+$contacto-server-flex-width: 100%;
+
+$contacto-countries-padding: 10px;
+$contacto-countries-margin: 5px;
+$contacto-countries-min-width: 150px;
+
+$contacto-input-checked-label: bold;
+
+$contacto-buttons-min-width: 100px;
+
+$contacto-sun-spinner-animation: toSpin;
+$contacto-sun-spinner-duration: 2s; 
+$contacto-sun-spinner-delay: 0.5s;
+$contacto-sun-spinner-width: 64px;
+$contacto-sun-spinner-height: $contacto-sun-spinner-width;
+$contacto-sun-spinner-margin: 0px 10px;
+
+
