--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -245,8 +245,9 @@ tr {
   .projects img:hover {
     transform: translate(100px, 100px) scale(1.3); }
 
-table, .tabla, .table {
+table, .tabla {
   /* margin: 2%; */
+  grid-area: tabla;
   margin-left: auto;
   margin-right: auto;
   width: 95%; }
@@ -259,20 +260,16 @@ table, .tabla, .table {
   margin: 10px auto;
   width: 95%;
   /* min-width: 80%; */ }
-
-.tablaContacto tr {
-  display: table;
-  flex-wrap: no-wrap; }
-
-.tablaContacto td {
-  /* min-width: 100px; */
-  max-width: 150px;
-  /* width: 120px;  */
-  border: none; }
-
-.tablaContacto th {
-  min-width: 80px;
-  border: none; }
+  .tablaContacto tr {
+    display: table;
+    flex-wrap: no-wrap;
+    table-layout: fixed; }
+  .tablaContacto td {
+    max-width: 150px;
+    border: none; }
+  .tablaContacto th {
+    min-width: 80px;
+    border: none; }
 
 @media screen and (max-width: 450px) {
   .tablaContacto th {
@@ -293,7 +290,7 @@ table, .tabla, .table {
   width: 95%; }
 
 fieldset {
-  border: 1px solid gray;
+  border: 1px solid grey;
   padding: 10px;
   margin: 10px 0px; }
 
@@ -317,12 +314,10 @@ input {
   max-width: 50%; }
 
 #initFields__EdadPais {
-  /* max-width: 50%; */
   display: flex;
   width: 50%; }
-
-#initFields__EdadPais input {
-  min-width: 20%; }
+  #initFields__EdadPais input {
+    min-width: 20%; }
 
 label {
   padding: 0px 5px;
@@ -336,14 +331,13 @@ label {
 #server {
   display: flex;
   width: 50%; }
+  #server input {
+    margin-left: 0px;
+    min-width: 70%; }
 
 #credenciales span {
   width: 30%;
   max-width: 40px; }
-
-#server input {
-  margin-left: 0px;
-  min-width: 70%; }
 
 .bulletin .input-group div {
   width: 100%; }
@@ -357,14 +351,14 @@ label {
     flex-wrap: wrap;
     width: 95%;
     height: auto; }
+  #credenciales span {
+    margin: 2px 0px; }
   #credenciales input {
     margin: 2px 0px;
     width: 100%; }
   #server {
     display: flex;
-    width: 100%; }
-  #credenciales span {
-    margin: 2px 0px; } }
+    width: 100%; } }
 
 #countries {
   display: inline-block;
