--- a/assets/scss/_sizes.scss
+++ b/assets/scss/_sizes.scss
@@ -65,15 +65,16 @@ $additionalExp-list-style: none;
 $additionExp-margin: 2%;
 $additionalExp-width: 95%;
 
-$members-flex-max-width1: 800px;
-$members-flex-max-width2: 660px;
-$members-flex-max-width3: 550px;
-$membersImgs-flex-min-width: 650px;
-$membersImgs-flex-min-width2: 512px;
-$membersImgs-flex-min-width3: 256px;
+$members-margin: 0px 10px;
+$members-row-margin: 10px 0px;
+
+$members-card-min-heigth: 440px;
+$members-card-min-width: 220px;
+
+$members-flex-max-width1: 768px;
+$membersImgs-flex-min-width: 550px;
 $membersImgs-flex-min-height: $membersImgs-flex-min-width;
-$membersImgs-flex-min-height2: $membersImgs-flex-min-width2;
-$membersImgs-flex-min-height3: $membersImgs-flex-min-width3;
+$membersCards-flex-margin: 10px;
 $membersImgs-padding: 25px;
 
 $projects-imgs-width: 512px;
